--- a/css/CrearTourStyle.css
+++ b/css/CrearTourStyle.css
@@ -1,3 +1,7 @@
+body {
+    #background: #333333;
+}
+
 h4 {
     margin: 0;
     padding: 0;
@@ -10,53 +14,58 @@ legend h4{
 
 section {
     height: 90vh;
-    background: silver;
+    background: #333333;
     display: flex;
 }
 
 #mapContent {
     overflow: hidden;
-    height: 90vh;
+    height: 95vh;
     width: 80vw;
-    background: darkgray;
+    background: #333333;
 }
 
 #formTour {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: inherit;
     width: 30vw;
+    height: 95vh;
+    background: #333333;
 }
 
 #formTour form {
     display: flex;
     flex-direction: column;
-    background: silver;
+    #background: silver;
     width: 80%;
+    margin:0;
+    padding:0;
 }
 
 .crearTour {
-    border: none;
     margin-top: 2vh;
-    background: skyblue;
+    background: linear-gradient(rgb(59, 142, 186),#ffffff);
     text-decoration: none;
     text-align: center;
-    padding: 1.5vh;
-    border: 2px solid black;
+    padding: 1vh;
+    border: 2px solid white;
     font-size: 1.4vh;
-    border-radius: 2vh;
-    color: #fff;
+    border-radius: 10px;
     text-transform: uppercase;
+    color:white;
 }
 
 textarea[name="description"] {
     margin-bottom: 2vh;
+    font-size: 2vh;
 }
 
 h4 {
     margin-top: 1vh;
     margin-bottom: 1.5vh;
+    color: rgb(59, 142, 186);
+
 }
 
 h4:nth-child(1) + * {
@@ -115,13 +124,14 @@ h4:nth-child(1) + * {
     font-weight: 300;
 }
 
+
 #target {
     width: 345px;
 }
 
 #posicion-map {
     width: 100%;
-    height: 20vh;
+    height: 15vh;
     margin-top: 2vh;
 
 }
@@ -148,32 +158,39 @@ h4:nth-child(1) + * {
 
 /*Selectable*/
 #selectable .ui-selecting {
-    background: #FECA40;
+    background: rgb(59, 142, 186);
 }
 
 #selectable .ui-selected {
-    background: #F39814;
+    background: rgb(59, 142, 186);
     color: white;
 }
 
 #selectable {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
     list-style-type: none;
     margin: 0;
     padding: 0;
     margin-top: 6vh;
-    margin-left: 5px;
+
 }
 
 #selectable li {
-    margin: 2px;
     padding: 0.4em;
     font-size: 1.5vh;
-    height: 18px;
+    margin-bottom: 5px;
 }
 
 #selectable > * {
     text-align: center;
     display: block;
-    float: left;
     width: 45%;
+    height: 1.5vh !important;
+}
+
+label {
+    color: white;
 }
