--- a/css/ProfileTravelsStyle.css
+++ b/css/ProfileTravelsStyle.css
@@ -3,6 +3,8 @@
     justify-content: center;
     align-items: flex-start;
     background: silver;
+    padding-bottom: 35vh;
+
 }
 
 aside {
@@ -11,17 +13,22 @@ aside {
     height: 60vh;
     width: 20vw;
     background: #333333;
-    margin-top: 2vh;
+    margin-top: 10vh;
     align-items: center;
+
 }
 
 aside img {
-    border: 2vh solid grey;
+    border: 1vh solid rgb(59, 142, 186);
     background: silver;
     border-radius: 50%;
     height: 20vh;
     margin-top: 2vh;
     margin-bottom: 3vh;
+}
+
+aside h1, aside p {
+    color: white;
 }
 
 aside a {
@@ -36,7 +43,9 @@ aside a {
 }
 
 aside > a:hover {
-    background: tomato;
+    background: rgb(59, 142, 186);
+    color: white;
+
 }
 
 h1 {
@@ -51,12 +60,13 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 2vh;
+    margin-top: 10vh;
     width: 50vw;
-    height: 85vh;
-    background: gray;
+    background: #333333;
     margin-left: 2vh;
     overflow-y: scroll;
+    padding-bottom: 4vh;
+
 }
 
 .itemTrour {
